removed unwanted images and fixed stretch issue

--- a/src/Components/Home/PastGlimpse/PastGlimpse.scss
+++ b/src/Components/Home/PastGlimpse/PastGlimpse.scss
@@ -51,16 +51,19 @@
           grid-area: auto / span 2;
           background-size: 100% 100%;
           background-position: top;
+          max-height: 600px;
         }
 
         &.big {
           grid-area: span 2 / span 2;
           background-size: 100% 100%;
+          max-height: 600px;
         }
 
         &.tall {
           grid-area: span 2;
           background-size: 100% 100%;
+          max-height: 600px;
         }
       }
     }
